# graphic-info

./: Cargo.toml  readme.md
src/: database.rs  graphic_info.rs  graphic_info_file.rs  lib.rs  main.rs
src/data_structure/: graphic_info.rs  graphic_info_file.rs
src/storage/: mod.rs  sqlite.rs
