[package]
name = "graphic-info"
version = "0.1.0"
authors = ["Vincent Chi <song374561@chivincent.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scroll = "^0.10"

[[bin]]
name = "graphic-info"
path = "src/main.rs"

[lib]
name = "graphic_info"
path = "src/graphic_info.rs"
