[package]
name = "graphic-info"
version = "0.2.1"
authors = ["Vincent Chi <song374561@chivincent.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "^2.33"
sqlite = "^0.25"
bincode = "^1.2"
serde = { version = "1.0", features = ["derive"] }

[[bin]]
name = "graphic-info"
path = "src/main.rs"
